Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 3.1.0
-
ghx-label-2
Description
An exhaustive run hit a memory limit while running TestSpillingDebugActionDimensions.test_spilling_regression_exhaustive.
E Query aborted:Memory limit exceeded: Error occurred on backend impala-ec2-centos74-m5-4xlarge-ondemand-1e26.vpc.cloudera.com:22002 by fragment 4042d95c390bfe15:40bddf6400000002 E Memory left in process limit: 9.61 GB E Memory left in query limit: -547.61 KB E Query(4042d95c390bfe15:40bddf6400000000): memory limit exceeded. Limit=800.00 MB Reservation=13.75 MB ReservationLimit=640.00 MB OtherMemory=786.78 MB Total=800.53 MB Peak=800.53 MB E Fragment 4042d95c390bfe15:40bddf6400000005: Reservation=4.75 MB OtherMemory=5.09 MB Total=9.84 MB Peak=9.84 MB E AGGREGATION_NODE (id=2): Total=0 Peak=0 E AGGREGATION_NODE (id=4): Total=8.00 KB Peak=8.00 KB E EXCHANGE_NODE (id=3): Reservation=5.03 MB OtherMemory=0 Total=5.03 MB Peak=5.03 MB E KrpcDeferredRpcs: Total=0 Peak=0 E GroupingAggregator: Reservation=4.75 MB OtherMemory=21.12 KB Total=4.77 MB Peak=4.77 MB E Exprs: Total=21.12 KB Peak=21.12 KB E NonGroupingAggregator: Total=4.00 KB Peak=4.00 KB E Exprs: Total=4.00 KB Peak=4.00 KB E KrpcDataStreamSender (dst_id=5): Total=16.00 KB Peak=16.00 KB E CodeGen: Total=1.82 KB Peak=379.00 KB E Fragment 4042d95c390bfe15:40bddf6400000002: Reservation=9.00 MB OtherMemory=781.70 MB Total=790.70 MB Peak=790.70 MB E AGGREGATION_NODE (id=1): Total=8.00 KB Peak=89.01 KB E HDFS_SCAN_NODE (id=0): Reservation=4.00 MB OtherMemory=2.15 MB Total=6.15 MB Peak=6.27 MB E Queued Batches: Total=277.96 KB Peak=430.95 KB E GroupingAggregator: Reservation=5.00 MB OtherMemory=776.52 MB Total=781.52 MB Peak=781.52 MB E Exprs: Total=776.52 MB Peak=776.52 MB E KrpcDataStreamSender (dst_id=3): Total=2.01 MB Peak=3.01 MB E CodeGen: Total=3.64 KB Peak=669.50 KB
One of the things that changed is "IMPALA-110 (part 2): Refactor PartitionedAggregationNode".
Attachments
Issue Links
- is caused by
-
IMPALA-110 Add support for multiple distinct operators in the same query block
-
- Resolved
-