IMPALA-7240: Fix missing QueryMaintenance call in AddBatchStreaming

A recent change, IMPALA-110 (part 2), refactored the aggregation code.
During this refactor, a call to QueryMaintenance() was inadvertantely
dropped in the AddBatchStreaming() path, causing
test_spilling_regression_exhaustive to fail by hitting the memory
limit.

Testing:
- Ran test_spilling_regression_exhaustive

Change-Id: I150a46d00acad139d186a150d9706ef47a10ac36
Reviewed-on: http://gerrit.cloudera.org:8080/10863
Reviewed-by: Michael Ho <kwho@cloudera.com>
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>